Arbol B insercion de artistas y Grafica de Matriz Dispersa

--- a/WebApp/PlayerServer/templates/login.html
+++ b/WebApp/PlayerServer/templates/login.html
@@ -45,9 +45,9 @@
                                         <input type="submit" class="btn btn-lg btn-success btn-block" />
                                     </div>
                                     <div class="col-md-12">
-                                        <label for="file-input">
-                                            <i class="fa fa-file-code-o" aria-hidden="true"></i>
-                                            <input type="file" name="file-input">
+                                        <label for="file-input" style="margin-top: 10px; width: 100%;">
+                                            <i class="fa fa-file-code-o" aria-hidden="true" style="display: inline;  margin: 10px; margin-top: 20px;"></i>
+                                            <input type="file" name="file-input" style="    display: inline;">
                                         </label>
                                     </div>
                                 </div>
